--- a/NewMaui/NewMaui.csproj
+++ b/NewMaui/NewMaui.csproj
@@ -92,6 +92,12 @@
 	  <MauiXaml Update="Pages\Service\GetAllService.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\Service\PostService\Post1.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Service\PostService\Post2.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\Service\Service.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
