--- a/NewMaui/NewMaui.csproj
+++ b/NewMaui/NewMaui.csproj
@@ -98,6 +98,9 @@
 	  <MauiXaml Update="Pages\Service\PostService\Post2.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\Service\PostService\Post3.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\Service\Service.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
