--- a/NewMaui/NewMaui.csproj
+++ b/NewMaui/NewMaui.csproj
@@ -95,6 +95,9 @@
 	  <MauiXaml Update="Pages\Service\GetInvoice.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\Service\InvoiceDetails.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\Service\PostService\Post1.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
